--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,19 +1,30 @@
 .mainContainer {
   margin: 48px;
+  margin-left: 256px;
+  margin-right: 256px;
   display: flex;
   flex-direction: column;
+
+  section {
+    padding-top: 128px;
+    margin-bottom: 128px;
+  }
 }
 
 .hero {
+  margin-top: 128px;
   margin-bottom: 128px;
+  padding-top: 0 !important;
 
   .contents {
     margin-top: 48px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    column-gap: 16px;
 
     a {
       width: fit-content;
+      font-weight: 600;
     }
     a:hover {
       text-decoration: underline;
@@ -25,6 +36,11 @@
   margin-bottom: 48px;
 }
 
+.containerTwoColumnText {
+  margin-bottom: 48px;
+  column-count: 2;
+}
+
 .containerTwoColumn {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -34,4 +50,13 @@
   p:last-child {
     margin-bottom: 0;
   }
+}
+
+.quote {
+  margin-top: 24px;
+  margin-bottom: 24px;
+  font-size: 24px;
+  background: white;
+  color: black;
+  padding: 12px 16px;
 }
