--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -8,6 +8,7 @@
   section {
     padding-top: 128px;
     margin-bottom: 128px;
+    border-top: 2px solid white;
   }
 }
 
@@ -15,6 +16,7 @@
   margin-top: 128px;
   margin-bottom: 128px;
   padding-top: 0 !important;
+  border: none !important;
 
   .contents {
     margin-top: 48px;
@@ -43,12 +45,19 @@
 
 .containerTwoColumn {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 50% 50%;
   column-gap: 48px;
   margin-bottom: 48px;
+  align-items: center;
 
   p:last-child {
     margin-bottom: 0;
+  }
+
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
   }
 }
 
@@ -56,7 +65,6 @@
   margin-top: 24px;
   margin-bottom: 24px;
   font-size: 24px;
-  background: white;
-  color: black;
   padding: 12px 16px;
+  border: 2px solid white;
 }
